<resources>
    <string name="app_name">Foodin\'Go</string>
    <string name="admin">ADMIN</string>
    <string name="customer">CUSTOMER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="comfort_food_at_affordable_prices">Comfort Food at Affordable Prices.</string>
    <string name="sign_in">Sign-in</string>
    <string name="user_id">user-id</string>
    <string name="enter_userid">Enter UserId</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log-in</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="confirm_password">Confirm Password</string>
</resources>