<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Admin">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ProgressBar
            android:id="@+id/progressAdmin"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:layout_marginHorizontal="100dp"
            android:minHeight="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminLogin" />

        <EditText
            android:id="@+id/adminUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:hint="@string/enter_userid"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#E3E3E3"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/adminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#E3E3E3"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adminUserName" />
        <Button
            android:id="@+id/adminLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>